[gd_scene load_steps=4 format=3 uid="uid://c8qpa7a6vj5u0"]

[ext_resource type="Script" path="res://Scripts/Cards/CardTemplate.gd" id="1_t4yuw"]
[ext_resource type="Texture2D" uid="uid://b6je51pem3kfr" path="res://Art/Cards/CardBase.png" id="2_88hl1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bdg1"]
size = Vector2(106, 150)

[node name="CardTemplate" type="Node2D"]
scale = Vector2(0.1, 0.1)
script = ExtResource("1_t4yuw")

[node name="CardSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_88hl1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_8bdg1")

[node name="BuyPanel" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = 30.0

[node name="BuyBackground" type="ColorRect" parent="BuyPanel"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 70.0
color = Color(0.321569, 0.321569, 0.321569, 1)

[node name="Label" type="Label" parent="BuyPanel/BuyBackground"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 40.0
text = "Buy Card?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="BuyPanel/BuyBackground"]
layout_mode = 0
offset_top = 40.0
offset_right = 60.0
offset_bottom = 70.0
text = "Yes"

[node name="CancelButton" type="Button" parent="BuyPanel/BuyBackground"]
layout_mode = 0
offset_left = 60.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 70.0
text = "Cancel"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="button_down" from="BuyPanel/BuyBackground/BuyButton" to="." method="_on_buy_button_button_down"]
[connection signal="button_down" from="BuyPanel/BuyBackground/CancelButton" to="." method="_on_cancel_button_button_down"]
